src/objects/Apttus_QPConfig__ProposalRollupData__c.object
<CustomObject>
    <description>Represents the dynamic rollup data for use in criteria</description>
    <fields>
        <fullName>Apttus_QPConfig__GroupByValues__c</fullName>
        <description>The group by field values</description>
        <externalId>true</externalId>
        <inlineHelpText>The group by field values</inlineHelpText>
        <label>Group By Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PeriodEndDate__c</fullName>
        <description>The rollup period end date</description>
        <inlineHelpText>The rollup period end date</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PeriodStartDate__c</fullName>
        <description>The rollup period start date</description>
        <inlineHelpText>The rollup period start date</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProposalId__c</fullName>
        <description>ID of the associated quote/proposal</description>
        <inlineHelpText>ID of the associated quote/proposal</inlineHelpText>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Proposal Rollup Data</relationshipLabel>
        <relationshipName>ProposalRollupData</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__RollupBusinessObject__c</fullName>
        <description>The API name of the business object for the rollup</description>
        <inlineHelpText>The API name of the business object for the rollup</inlineHelpText>
        <label>Rollup Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OrderLineItem__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__RollupField__c</fullName>
        <description>The rollup field</description>
        <inlineHelpText>The rollup field</inlineHelpText>
        <label>Rollup Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__RollupId__c</fullName>
        <description>ID of the associated rollup</description>
        <inlineHelpText>ID of the associated rollup</inlineHelpText>
        <label>Search Filter (CPQ)</label>
        <referenceTo>Apttus_Config2__SearchFilter__c</referenceTo>
        <relationshipLabel>Proposal Rollup Data</relationshipLabel>
        <relationshipName>ProposalRollupData</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__RollupValue__c</fullName>
        <description>The rollup value</description>
        <inlineHelpText>The rollup value</inlineHelpText>
        <label>Rollup Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__SoldToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the sold to account</description>
        <inlineHelpText>The ID of the sold to account</inlineHelpText>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposal Rollup Data</relationshipLabel>
        <relationshipName>ProposalRollupData</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Proposal Rollup Data</label>
    <nameField>
        <displayFormat>PD-{00000000}</displayFormat>
        <label>Rollup Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Rollup Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>